--- a/TimeSeriesChart-Web/src/app/charts/line-chart/line-chart.component.html
+++ b/TimeSeriesChart-Web/src/app/charts/line-chart/line-chart.component.html
@@ -1,3 +1,19 @@
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-12 col-md-4 form-group">
+      <input type="text"
+            placeholder="Datepicker"
+            class="form-control"
+            bsDatepicker>
+    </div>
+    <div class="col-xs-12 col-12 col-md-4 form-group">
+      <input type="text"
+            placeholder="Daterangepicker"
+            class="form-control"
+            bsDaterangepicker>
+    </div>
+  </div>
+</div>
 <div style="display: block;">
 <div class="chartjs-container">
     <canvas baseChart 
