--- a/TimeSeriesChart-Web/src/app/charts/line-chart/line-chart.component.html
+++ b/TimeSeriesChart-Web/src/app/charts/line-chart/line-chart.component.html
@@ -1,16 +1,26 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-12 col-md-4 form-group">
+    <div class="col-xs-12">
+
+      
+
+
+
+
       <input type="text"
-            placeholder="Datepicker"
+            placeholder="Choose date"
             class="form-control"
             bsDatepicker>
     </div>
-    <div class="col-xs-12 col-12 col-md-4 form-group">
-      <input type="text"
-            placeholder="Daterangepicker"
-            class="form-control"
-            bsDaterangepicker>
+    <button type="button" class="btn btn-primary">Load</button>
+    <div class="col-xs-12">
+      <input
+        type="text"
+        placeholder="Choose date"
+        class="form-control"
+        bsDatepicker
+        bsDaterangepicker
+        [bsConfig]="{ isAnimated: true }">
     </div>
   </div>
 </div>
