--- a/TimeSeriesChart-Web/src/app/app.component.html
+++ b/TimeSeriesChart-Web/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
 
-<div class="container">
+<!-- <div class="container">
     <h1>Angular Select Dropdown Example - ItSolutionStuff.com</h1>
       
     <form [formGroup]="form" (ngSubmit)="submit()">
@@ -19,4 +19,4 @@
       
         <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
     </form>
-</div>
+</div> -->
