--- a/TimeSeriesChart-Web/src/app/charts/line-chart/line-chart.component.html
+++ b/TimeSeriesChart-Web/src/app/charts/line-chart/line-chart.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <form [formGroup]="form" (ngSubmit)="submit()">
+  <form [formGroup]="form" (ngSubmit)="search()">
       <div class="form-row">
         <div class="col-2">
           <label for="building">Building :</label>
@@ -42,14 +42,23 @@
       </div>
 
   </form>
-
-      <div class="chartjs-container mt-4">
+  <!-- <div class="row" *ngIf="readingModel">  
+    <div style="display: block">  
+        <canvas baseChart  
+                [datasets]="readingModel.ReadingsModelList"  
+                [labels]="readingModel.chartLabels"  
+                [options]="chartOptions"  
+                [legend]="chartLegend"  
+                [chartType]="chartType"></canvas>  
+    </div>  
+</div>   -->
+      <!-- <div class="chartjs-container mt-4">
         <canvas baseChart height="100" legend="true" [datasets]="lineChartData" [labels]="lineChartLabels"
           [options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType"
           [plugins]="lineChartPlugins" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
         </canvas>
       </div>
- 
+  -->
 
 
 
